fixed layout shifts on admin page

--- a/src/index.scss
+++ b/src/index.scss
@@ -145,8 +145,8 @@ main {
         }
     }
     td {
-        width: 25%;
-        padding: 1em 0.5em;
+        width: 1%;
+        padding: 0.75em 0.5em;
         white-space: nowrap;
 
         &:last-of-type {
@@ -178,10 +178,13 @@ main {
             color: $error-color;
         }
         .search-label {
+            // margin-left: -1em;
             .search-select {
+                position: relative;
+                right: 0.5em;
                 border: none;
                 padding: 0.25em 0.5em 0.25em 0.25em;
-                margin-right: -2em;
+                margin-right: -3em;
                 background-color: white;
                 font-size: 1em;
                 // appearance: none;
